<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/side_nav_bar"
        android:minHeight="640dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:fontFamily="sans-serif-light"
            android:lineSpacingExtra="4sp"
            android:text="@string/validation_forgot_text"
            android:textColor="@color/backgroundColorWhite"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="20dp"
            app:layout_constraintRight_toRightOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/validation_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="284dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="40dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="40dp"
            app:layout_constraintLeft_toLeftOf="parent">

            <EditText
                android:id="@+id/validation_email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:hint="@string/validation_forgot_email"
                android:maxLines="1"
                android:textColor="@color/backgroundColorWhite"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/login_validation"
            android:layout_width="280dp"
            android:layout_height="56dp"
            android:layout_marginTop="376dp"
            android:background="@drawable/ripple_with_backgroundcolor_white"
            android:clickable="true"
            android:fontFamily="sans-serif-medium"
            android:elevation="4dp"
            android:gravity="center"
            android:text="@string/validation_forgot_button_text"
            android:textColor="@color/colorTextDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="40dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/validation_forgot_forgot_text"
            android:textColor="@color/backgroundColorWhite"
            android:textSize="12sp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_validation"
            app:layout_constraintEnd_toStartOf="@+id/forget_loginsubmit"
            tools:layout_editor_absoluteX="102dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/validation_forgot_sign_text"
            android:textColor="@color/backgroundColorWhite"
            android:textSize="12sp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:layout_constraintEnd_toStartOf="@+id/forget_registersubmit"
            tools:layout_editor_absoluteX="80dp" />

        <TextView
            android:id="@+id/forget_loginsubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:clickable="true"

            android:fontFamily="sans-serif-medium"
            android:text="@string/validation_forgot_forgot_New"
            android:textColor="@color/backgroundColorWhite"
            android:textSize="12sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/login_validation"
            tools:layout_editor_absoluteX="217dp" />

        <TextView
            android:id="@+id/forget_registersubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:fontFamily="sans-serif-medium"
            android:text="@string/validation_forgot_sign_up"
            android:textColor="@color/backgroundColorWhite"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            tools:layout_editor_absoluteX="231dp" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>