<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/side_nav_bar"
        android:minHeight="640dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:background="@drawable/logo_ffme"
            android:fontFamily="sans-serif-light"
            android:lineSpacingExtra="4sp"
            android:textColor="@color/backgroundColorWhite"
            android:textSize="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/validation_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="284dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/validation_email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:hint="@string/validation_login_email"
                android:maxLines="1"
                android:textColor="@color/backgroundColorWhite"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/validation_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="356dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/validation_password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:fontFamily="sans-serif-light"
                android:hint="@string/validation_login_password"
                android:maxLines="1"
                android:textColor="@color/backgroundColorWhite"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/login_validation"
            android:layout_width="280dp"
            android:layout_height="56dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="447dp"
            android:elevation="4dp"
            android:background="@drawable/ripple_with_backgroundcolor_white"
            android:clickable="true"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/validation_login_button_text"
            android:textColor="@color/colorTextDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/login_forgotsubmit"
            android:layout_width="280dp"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/validation_login_sign_up"
            android:textColor="@color/backgroundColorWhite"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_validation" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>